KFSPTS-35513 upgrade to the 02/28/2024 version of financials (#1784)